--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>白纸食堂</title>
+    <title>啊哈哈哈哈哈</title>
     <style>
         /* 导航内容样式 */
         /* 顶部、顶部导航栏样式 */
